# dicom-radiology-pipeline

./: .gitignore  README.md  app.py  deidentify.py  dicom_utils.py  docker-compose.yml  download_sample.py  main.py  orthanc_client.py  pyproject.toml  setup_sample_data.py  tcia_client.py
dicom_deidentified/: 00000001.dcm  00000002.dcm  00000003.dcm  00000004.dcm  00000005.dcm  00000006.dcm  00000007.dcm  00000008.dcm  00000009.dcm  00000010.dcm  00000011.dcm  00000012.dcm  00000013.dcm  00000014.dcm  00000015.dcm  00000016.dcm  00000017.dcm  00000018.dcm  00000019.dcm  00000020.dcm  00000021.dcm  00000022.dcm  00000023.dcm  00000024.dcm  00000025.dcm  00000026.dcm  00000027.dcm  00000028.dcm  00000029.dcm  00000030.dcm  00000031.dcm  00000032.dcm  00000033.dcm  00000034.dcm  00000035.dcm  00000036.dcm  00000037.dcm  00000038.dcm  00000039.dcm  00000040.dcm  (+10 more)
pages/: deidentify_page.py  dicom_viewer.py  home.py  tcia_browser.py
tests/: test_dicom_utils.py  test_orthanc_client.py  test_tcia.py
